--- a/style.css
+++ b/style.css
@@ -52,10 +52,8 @@
 
 }
 #candles{
-    top: 20px;
     max-height:50px;
     left: 120px;
-    
     visibility: hidden;
 }
 /* Fill your code*/
@@ -140,4 +138,5 @@ ul{
 }
 #total{
     font-size: 25px;
+    font-weight: bolder;
 }
